nRF24 connection working

--- a/basestation.ioc
+++ b/basestation.ioc
@@ -45,8 +45,9 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=BOOTPATH
 Mcu.IP1=CORTEX_M33_NS
-Mcu.IP10=THREADX
-Mcu.IP11=USART3
+Mcu.IP10=SYS
+Mcu.IP11=THREADX
+Mcu.IP12=USART3
 Mcu.IP2=ETH
 Mcu.IP3=ICACHE
 Mcu.IP4=MEMORYMAP
@@ -54,37 +55,43 @@ Mcu.IP5=NETXDUO
 Mcu.IP6=NVIC
 Mcu.IP7=PWR
 Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=12
+Mcu.IP9=SPI1
+Mcu.IPNb=13
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PF4
 Mcu.Pin1=PC1
-Mcu.Pin10=PD9
-Mcu.Pin11=PG4
-Mcu.Pin12=PG11
-Mcu.Pin13=PG13
-Mcu.Pin14=VP_ICACHE_VS_ICACHE
-Mcu.Pin15=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin16=VP_NETXDUO_VS_AddonsOoDHCP
-Mcu.Pin17=VP_NETXDUO_VS_NetworkOoInterface
-Mcu.Pin18=VP_NETXDUO_VS_EthernetOoPhyOoInterface
-Mcu.Pin19=VP_PWR_VS_SECSignals
+Mcu.Pin10=PD8
+Mcu.Pin11=PD9
+Mcu.Pin12=PG4
+Mcu.Pin13=PC6
+Mcu.Pin14=PG9
+Mcu.Pin15=PG11
+Mcu.Pin16=PG13
+Mcu.Pin17=PB5
+Mcu.Pin18=PB8
+Mcu.Pin19=PB9
 Mcu.Pin2=PA1
-Mcu.Pin20=VP_PWR_VS_LPOM
-Mcu.Pin21=VP_PWR_VS_DBSignals
-Mcu.Pin22=VP_SYS_VS_tim6
-Mcu.Pin23=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin24=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin25=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=VP_ICACHE_VS_ICACHE
+Mcu.Pin21=VP_NETXDUO_VS_NXOoCore
+Mcu.Pin22=VP_NETXDUO_VS_AddonsOoDHCP
+Mcu.Pin23=VP_NETXDUO_VS_NetworkOoInterface
+Mcu.Pin24=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin25=VP_PWR_VS_SECSignals
+Mcu.Pin26=VP_PWR_VS_LPOM
+Mcu.Pin27=VP_PWR_VS_DBSignals
+Mcu.Pin28=VP_SYS_VS_tim6
+Mcu.Pin29=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
 Mcu.Pin3=PA2
-Mcu.Pin4=PA7
-Mcu.Pin5=PC4
-Mcu.Pin6=PC5
-Mcu.Pin7=PB0
-Mcu.Pin8=PB15
-Mcu.Pin9=PD8
-Mcu.PinsNb=26
+Mcu.Pin30=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin31=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin4=PA5
+Mcu.Pin5=PA7
+Mcu.Pin6=PC4
+Mcu.Pin7=PC5
+Mcu.Pin8=PB0
+Mcu.Pin9=PB15
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -131,6 +138,10 @@ PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=NRF_SCK
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
 PB0.GPIOParameters=PinState,GPIO_Label
@@ -140,12 +151,29 @@ PB0.PinState=GPIO_PIN_SET
 PB0.Signal=GPIO_Output
 PB15.Mode=RMII
 PB15.Signal=ETH_TXD1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=NRF_MOSI
+PB5.Locked=true
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=SPI1_MOSI
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=NRF_CSN
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=NRF_IRQ
+PB9.Locked=true
+PB9.Signal=GPXTI9
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
 PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=NRF_CE
+PC6.Locked=true
+PC6.Signal=GPIO_Output
 PD8.Locked=true
 PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
@@ -165,6 +193,11 @@ PG4.GPIOParameters=GPIO_Label
 PG4.GPIO_Label=LED_RED
 PG4.Locked=true
 PG4.Signal=GPIO_Output
+PG9.GPIOParameters=GPIO_Label
+PG9.GPIO_Label=NRF_MISO
+PG9.Locked=true
+PG9.Mode=Full_Duplex_Master
+PG9.Signal=SPI1_MISO
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -196,7 +229,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,4-MX_NetXDuo_Init-NETXDUO-false-HAL-false,5-MX_ETH_Init-ETH-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_ICACHE_Init-ICACHE-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,4-MX_NetXDuo_Init-NETXDUO-false-HAL-false,5-MX_ETH_Init-ETH-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_ICACHE_Init-ICACHE-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=250000000
 RCC.AHBFreq_Value=250000000
 RCC.APB1Freq_Value=250000000
@@ -284,6 +317,16 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=500000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CalculateBaudRate=7.8125 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,NSSPMode
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.NSSPMode=SPI_NSS_PULSE_ENABLE
+SPI1.VirtualType=VM_MASTER
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
