--- a/basestation.ioc
+++ b/basestation.ioc
@@ -59,39 +59,40 @@ Mcu.IP9=SPI1
 Mcu.IPNb=13
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PF4
-Mcu.Pin1=PC1
-Mcu.Pin10=PD8
-Mcu.Pin11=PD9
-Mcu.Pin12=PG4
-Mcu.Pin13=PC6
-Mcu.Pin14=PG9
-Mcu.Pin15=PG11
-Mcu.Pin16=PG13
-Mcu.Pin17=PB5
-Mcu.Pin18=PB8
-Mcu.Pin19=PB9
-Mcu.Pin2=PA1
-Mcu.Pin20=VP_ICACHE_VS_ICACHE
-Mcu.Pin21=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin22=VP_NETXDUO_VS_AddonsOoDHCP
-Mcu.Pin23=VP_NETXDUO_VS_NetworkOoInterface
-Mcu.Pin24=VP_NETXDUO_VS_EthernetOoPhyOoInterface
-Mcu.Pin25=VP_PWR_VS_SECSignals
-Mcu.Pin26=VP_PWR_VS_LPOM
-Mcu.Pin27=VP_PWR_VS_DBSignals
-Mcu.Pin28=VP_SYS_VS_tim6
-Mcu.Pin29=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin3=PA2
-Mcu.Pin30=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin31=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin4=PA5
-Mcu.Pin5=PA7
-Mcu.Pin6=PC4
-Mcu.Pin7=PC5
-Mcu.Pin8=PB0
-Mcu.Pin9=PB15
-Mcu.PinsNb=32
+Mcu.Pin0=PC13
+Mcu.Pin1=PF3
+Mcu.Pin10=PB0
+Mcu.Pin11=PB15
+Mcu.Pin12=PD8
+Mcu.Pin13=PD9
+Mcu.Pin14=PG4
+Mcu.Pin15=PC6
+Mcu.Pin16=PG9
+Mcu.Pin17=PG11
+Mcu.Pin18=PG13
+Mcu.Pin19=PB5
+Mcu.Pin2=PF4
+Mcu.Pin20=PB8
+Mcu.Pin21=VP_ICACHE_VS_ICACHE
+Mcu.Pin22=VP_NETXDUO_VS_NXOoCore
+Mcu.Pin23=VP_NETXDUO_VS_AddonsOoDHCP
+Mcu.Pin24=VP_NETXDUO_VS_NetworkOoInterface
+Mcu.Pin25=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin26=VP_PWR_VS_SECSignals
+Mcu.Pin27=VP_PWR_VS_LPOM
+Mcu.Pin28=VP_PWR_VS_DBSignals
+Mcu.Pin29=VP_SYS_VS_tim6
+Mcu.Pin3=PC1
+Mcu.Pin30=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin31=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin32=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA5
+Mcu.Pin7=PA7
+Mcu.Pin8=PC4
+Mcu.Pin9=PC5
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -108,6 +109,8 @@ NETXDUO.NetXDuo_Generate_Init_Code=true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ETH_IRQn=true\:7\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.EXTI13_IRQn=true\:7\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:7\:0\:true\:false\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -160,12 +163,12 @@ PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=NRF_CSN
 PB8.Locked=true
 PB8.Signal=GPIO_Output
-PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=NRF_IRQ
-PB9.Locked=true
-PB9.Signal=GPXTI9
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=BTN_USER
+PC13.Locked=true
+PC13.Signal=GPXTI13
 PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
 PC5.Mode=RMII
@@ -179,6 +182,11 @@ PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PF3.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PF3.GPIO_Label=NRF_IRQ
+PF3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PF3.Locked=true
+PF3.Signal=GPXTI3
 PF4.GPIOParameters=GPIO_Label
 PF4.GPIO_Label=LED_YELLOW
 PF4.Locked=true
@@ -317,8 +325,10 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=500000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
-SH.GPXTI9.0=GPIO_EXTI9
-SH.GPXTI9.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI1.CalculateBaudRate=7.8125 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
