--- a/basestation.ioc
+++ b/basestation.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+BOOTPATH.BootPathName=LEGACY
+BOOTPATH.IPParameters=BootPathName
+BOOTPATH.UserSelectedBootPath=LEGACY
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -96,8 +99,8 @@ Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
-MxCube.Version=6.9.2
-MxDb.Version=DB.6.0.92
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NETXDUO.ETH_ON=1
 NETXDUO.IPParameters=ETH_ON,LAN_8742,NetXDuo_Generate_Init_Code,NX_ENABLE_INTERFACE_CAPABILITY,NX_APP_MEM_POOL_SIZE,NX_APP_IP_INSTANCE_THREAD_SIZE,NX_APP_THREAD_STACK_SIZE
 NETXDUO.LAN_8742=1
@@ -150,7 +153,7 @@ PA7.Signal=ETH_CRS_DV
 PB0.GPIOParameters=PinState,GPIO_Label
 PB0.GPIO_Label=LED_GREEN
 PB0.Locked=true
-PB0.PinState=GPIO_PIN_SET
+PB0.PinState=GPIO_PIN_RESET
 PB0.Signal=GPIO_Output
 PB15.Mode=RMII
 PB15.Signal=ETH_TXD1
@@ -187,9 +190,10 @@ PF3.GPIO_Label=NRF_IRQ
 PF3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PF3.Locked=true
 PF3.Signal=GPXTI3
-PF4.GPIOParameters=GPIO_Label
+PF4.GPIOParameters=PinState,GPIO_Label
 PF4.GPIO_Label=LED_YELLOW
 PF4.Locked=true
+PF4.PinState=GPIO_PIN_SET
 PF4.Signal=GPIO_Output
 PG11.Locked=true
 PG11.Mode=RMII
@@ -225,7 +229,7 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=basestation.ioc
 ProjectManager.ProjectName=basestation
@@ -237,7 +241,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,4-MX_NetXDuo_Init-NETXDUO-false-HAL-false,5-MX_ETH_Init-ETH-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_ICACHE_Init-ICACHE-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_NetXDuo_Init-NETXDUO-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ICACHE_Init-ICACHE-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=250000000
 RCC.AHBFreq_Value=250000000
 RCC.APB1Freq_Value=250000000
@@ -364,4 +368,3 @@ VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Mode=Core_Default
 VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Signal=THREADX_VS_RTOSJjThreadXJjCoreJjDefault
 board=custom
-isbadioc=false
