Working basestation ping

--- a/basestation.ioc
+++ b/basestation.ioc
@@ -337,6 +337,9 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.NSSPMode=SPI_NSS_PULSE_ENABLE
 SPI1.VirtualType=VM_MASTER
+THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_MEM_POOL_SIZE
+THREADX.TX_APP_GENERATE_INIT_CODE=true
+THREADX.TX_APP_MEM_POOL_SIZE=4096
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
